# belles-native

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/well/belles/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  belles-info.cpp  belles-normal.cpp  belles-normal2.cpp  native-lib.cpp
app/src/main/java/com/well/belles/: MainActivity.kt  NativeBellesInfo.kt  NativeBellesNormal.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/well/belles/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
